tests/compError/compAssert.ucl
// compError
// error: assert failed
// tests/compError/compAssert.ucl:5 -> here

@compAssert(false)